# csv-json-converter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Model/ConvertFromCsvToJson/: ConvertFromCsvToJson.cpp  ConvertFromCsvToJson.h
Model/ConvertFromJsonToCsv/: ConvertFromJsonToCsv.cpp  ConvertFromJsonToCsv.h
Model/ConvertStrategy/: ConvertStrategy.h
Model/Convertor/: Convertor.cpp  Convertor.h
Model/ErrorText/: ErrorText.cpp  ErrorText.h
Model/UserInput/: UserInput.cpp  UserInput.h
